--- a/Excel-files/CrudeOiland-crudeoil_files/stylesheet.css
+++ b/Excel-files/CrudeOiland-crudeoil_files/stylesheet.css
@@ -4,7 +4,7 @@ col
 	{mso-width-source:auto;}
 br
 	{mso-data-placement:same-cell;}
-.style54
+.style43
 	{color:blue;
 	font-size:10.0pt;
 	font-weight:400;
@@ -25,7 +25,7 @@ a:link
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
 a:visited
-	{color:purple;
+	{color:#954F72;
 	font-size:10.0pt;
 	font-weight:400;
 	font-style:normal;
@@ -33,6 +33,16 @@ a:visited
 	text-underline-style:single;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
+.style51
+	{color:blue;
+	font-size:10.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:underline;
+	text-underline-style:single;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-style-name:"Hyperlink 2";}
 .style0
 	{mso-number-format:General;
 	text-align:general;
@@ -53,7 +63,7 @@ a:visited
 	mso-protection:locked visible;
 	mso-style-name:Normal;
 	mso-style-id:0;}
-.style58
+.style46
 	{mso-number-format:General;
 	text-align:general;
 	vertical-align:bottom;
@@ -92,15 +102,106 @@ td
 	mso-protection:locked visible;
 	white-space:nowrap;
 	mso-rotate:0;}
-.xl66
-	{mso-style-parent:style0;
-	color:navy;
-	font-size:14.0pt;
-	font-weight:700;
+.xl76
+	{mso-style-parent:style43;
+	color:blue;
+	text-decoration:underline;
+	text-underline-style:single;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;}
-.xl67
+.xl77
+	{mso-style-parent:style0;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:left;}
+.xl78
+	{mso-style-parent:style0;
+	text-align:left;
+	vertical-align:middle;}
+.xl79
+	{mso-style-parent:style0;
+	color:navy;
+	font-size:12.0pt;
+	font-weight:700;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl80
+	{mso-style-parent:style0;
+	font-weight:700;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:center;
+	white-space:normal;}
+.xl81
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	font-weight:700;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:center;
+	white-space:normal;}
+.xl82
+	{mso-style-parent:style0;
+	mso-number-format:"mmm\\-yyyy";}
+.xl83
+	{mso-style-parent:style46;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl84
+	{mso-style-parent:style46;
+	font-weight:700;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:center;
+	white-space:normal;}
+.xl85
+	{mso-style-parent:style0;
+	color:white;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl86
+	{mso-style-parent:style0;
+	color:blue;
+	text-decoration:underline;
+	text-underline-style:single;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl87
+	{mso-style-parent:style0;
+	color:#333333;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl88
+	{mso-style-parent:style0;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;}
+.xl89
+	{mso-style-parent:style0;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:left;
+	background:#FFFFCC;
+	mso-pattern:black none;}
+.xl90
+	{mso-style-parent:style0;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:center;
+	background:#FFFFCC;
+	mso-pattern:black none;}
+.xl91
+	{mso-style-parent:style51;
+	color:blue;
+	font-weight:700;
+	text-decoration:underline;
+	text-underline-style:single;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:left;
+	background:#FFFFCC;
+	mso-pattern:black none;}
+.xl92
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -108,7 +209,7 @@ td
 	mso-font-charset:0;
 	background:navy;
 	mso-pattern:black none;}
-.xl68
+.xl93
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -117,18 +218,7 @@ td
 	text-align:center;
 	background:navy;
 	mso-pattern:black none;}
-.xl69
-	{mso-style-parent:style54;
-	color:blue;
-	text-decoration:underline;
-	text-underline-style:single;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	text-align:left;}
-.xl70
-	{mso-style-parent:style0;
-	text-align:left;}
-.xl71
+.xl94
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
@@ -137,16 +227,7 @@ td
 	text-align:left;
 	background:navy;
 	mso-pattern:black none;}
-.xl72
-	{mso-style-parent:style0;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	text-align:left;}
-.xl73
-	{mso-style-parent:style0;
-	text-align:left;
-	vertical-align:middle;}
-.xl74
+.xl95
 	{mso-style-parent:style0;
 	color:red;
 	font-size:12.0pt;
@@ -155,77 +236,11 @@ td
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;}
-.xl75
-	{mso-style-parent:style54;
-	color:blue;
-	font-weight:700;
-	text-decoration:underline;
-	text-underline-style:single;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	text-align:left;
-	background:#FFFFCC;
-	mso-pattern:black none;}
-.xl76
-	{mso-style-parent:style0;
-	text-align:left;
-	background:#FFFFCC;
-	mso-pattern:black none;}
-.xl77
-	{mso-style-parent:style0;
-	text-align:center;
-	background:#FFFFCC;
-	mso-pattern:black none;}
-.xl78
-	{mso-style-parent:style0;
-	color:#333333;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;}
-.xl79
-	{mso-style-parent:style0;
-	color:blue;
-	text-decoration:underline;
-	text-underline-style:single;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;}
-.xl80
-	{mso-style-parent:style0;
-	color:white;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;}
-.xl81
+.xl96
 	{mso-style-parent:style0;
 	color:navy;
-	font-size:12.0pt;
-	font-weight:700;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;}
-.xl82
-	{mso-style-parent:style0;
+	font-size:14.0pt;
 	font-weight:700;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
-	text-align:center;
-	white-space:normal;}
-.xl83
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-weight:700;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	text-align:center;
-	white-space:normal;}
-.xl84
-	{mso-style-parent:style0;
-	mso-number-format:"mmm\\-yyyy";}
-.xl85
-	{mso-style-parent:style58;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;}
-.xl86
-	{mso-style-parent:style58;
-	font-weight:700;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	text-align:center;
-	white-space:normal;}
+	text-align:left;}
