--- a/Excel-files/CrudeOiland-crudeoil_files/stylesheet.css
+++ b/Excel-files/CrudeOiland-crudeoil_files/stylesheet.css
@@ -102,7 +102,7 @@ td
 	mso-protection:locked visible;
 	white-space:nowrap;
 	mso-rotate:0;}
-.xl76
+.xl77
 	{mso-style-parent:style43;
 	color:blue;
 	text-decoration:underline;
@@ -110,32 +110,24 @@ td
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;}
-.xl77
+.xl78
 	{mso-style-parent:style0;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;}
-.xl78
+.xl79
 	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:middle;}
-.xl79
+.xl80
 	{mso-style-parent:style0;
 	color:navy;
 	font-size:12.0pt;
 	font-weight:700;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl80
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	text-align:center;
-	white-space:normal;}
 .xl81
 	{mso-style-parent:style0;
-	font-size:9.0pt;
 	font-weight:700;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
@@ -143,54 +135,62 @@ td
 	white-space:normal;}
 .xl82
 	{mso-style-parent:style0;
-	mso-number-format:"mmm\\-yyyy";}
+	font-size:9.0pt;
+	font-weight:700;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:center;
+	white-space:normal;}
 .xl83
+	{mso-style-parent:style0;
+	mso-number-format:"mmm\\-yyyy";}
+.xl84
 	{mso-style-parent:style46;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl84
+.xl85
 	{mso-style-parent:style46;
 	font-weight:700;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:center;
 	white-space:normal;}
-.xl85
+.xl86
 	{mso-style-parent:style0;
 	color:white;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl86
+.xl87
 	{mso-style-parent:style0;
 	color:blue;
 	text-decoration:underline;
 	text-underline-style:single;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl87
+.xl88
 	{mso-style-parent:style0;
 	color:#333333;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl88
+.xl89
 	{mso-style-parent:style0;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl89
+.xl90
 	{mso-style-parent:style0;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;
 	background:#FFFFCC;
 	mso-pattern:black none;}
-.xl90
+.xl91
 	{mso-style-parent:style0;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:center;
 	background:#FFFFCC;
 	mso-pattern:black none;}
-.xl91
+.xl92
 	{mso-style-parent:style51;
 	color:blue;
 	font-weight:700;
@@ -201,21 +201,12 @@ td
 	text-align:left;
 	background:#FFFFCC;
 	mso-pattern:black none;}
-.xl92
-	{mso-style-parent:style0;
-	color:white;
-	font-weight:700;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	background:navy;
-	mso-pattern:black none;}
 .xl93
 	{mso-style-parent:style0;
 	color:white;
 	font-weight:700;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
-	text-align:center;
 	background:navy;
 	mso-pattern:black none;}
 .xl94
@@ -224,10 +215,19 @@ td
 	font-weight:700;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
-	text-align:left;
+	text-align:center;
 	background:navy;
 	mso-pattern:black none;}
 .xl95
+	{mso-style-parent:style0;
+	color:white;
+	font-weight:700;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	text-align:left;
+	background:navy;
+	mso-pattern:black none;}
+.xl96
 	{mso-style-parent:style0;
 	color:red;
 	font-size:12.0pt;
@@ -236,7 +236,7 @@ td
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;}
-.xl96
+.xl97
 	{mso-style-parent:style0;
 	color:navy;
 	font-size:14.0pt;
@@ -244,3 +244,13 @@ td
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	text-align:left;}
+.xl98
+	{mso-style-parent:style0;
+	vertical-align:middle;
+	white-space:normal;}
+.xl99
+	{mso-style-parent:style0;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	vertical-align:middle;
+	white-space:normal;}
